# NitroAGI

./: .env.example  .env.production  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_STRATEGY.md  DEVELOPMENT_SETUP.md  Dockerfile  FUTURE_ROADMAP.md  LICENSE  PROJECT_PLAN.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-vercel.txt  requirements.txt  vercel.json
.claude/: settings.local.json
api/: index.py
config/: monitoring.py  security.py
docs/: COMPETITIVE_LANDSCAPE.md  CONNECTION_ARCHITECTURE.md  GETTING_STARTED.md  ORCHESTRATOR_WORKFLOW.md  RESEARCH_NOTES.md
examples/: orchestrator_example.py
scripts/: deploy-vercel.ps1  deploy-vercel.sh  fix-vercel-404.md  init-db.sql  load_test.py  migrate-db.py  quick-deploy.md  setup-vercel.ps1
src/nitroagi/: __init__.py
src/nitroagi/api/: __init__.py  app.py  dependencies.py  main.py
src/nitroagi/api/graphql/: __init__.py  schema.py
src/nitroagi/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  security.py
src/nitroagi/api/routes/: __init__.py  chat.py  health.py  memory.py  modules.py  system.py  vision.py
src/nitroagi/api/routes/v1/: __init__.py  learning.py  modules.py  multimodal.py  nexus.py  reasoning.py
src/nitroagi/api/websocket/: __init__.py  handlers.py  manager.py
src/nitroagi/cli/: __init__.py  main.py
src/nitroagi/cli/commands/: __init__.py  chat.py  memory.py  module.py  server.py  system.py
src/nitroagi/core/: __init__.py  base.py  connections.py  exceptions.py  executive_controller.py  learning.py  memory.py  message_bus.py  multimodal.py  network.py  orchestrator.py  prefrontal_cortex.py
src/nitroagi/modules/: __init__.py  base.py
src/nitroagi/modules/advanced_reasoning/: __init__.py  abstract_reasoning.py  creative_thinking.py  mathematical_solver.py  scientific_reasoning.py
src/nitroagi/modules/audio/: __init__.py  audio_module.py
src/nitroagi/modules/language/: __init__.py  language_module.py  providers.py
src/nitroagi/modules/reasoning/: __init__.py  engines.py  reasoning_module.py
src/nitroagi/modules/vision/: __init__.py  processors.py  vision_module.py
src/nitroagi/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  conftest.py  fixtures.py  test_e2e.py  utils.py
tests/integration/: test_api.py  test_language_integration.py
tests/performance/: test_benchmarks.py
tests/unit/: test_base_module.py  test_config.py  test_language_module.py  test_learning.py  test_memory.py  test_network.py  test_prefrontal_cortex.py  test_vision_module.py
web/chat/: index.html
web/dashboard/: index.html
